Add posthog analytics, swr, theme, i18n providers and crawler

--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@iconify-icon/react": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "exifreader": "^4.23.7",
     "framer-motion": "^11.11.7",
+    "i18next": "^23.16.0",
+    "i18next-http-backend": "^2.6.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "photoswipe": "^5.4.4",
+    "posthog-js": "^1.167.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.3",
     "react-photo-album": "^3.0.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
@@ -46,10 +53,13 @@
     "sharp": "^0.33.5",
     "shiki": "^1.6.0",
     "swiper": "^11.1.14",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "yet-another-react-lightbox": "^3.21.6"
+    "yet-another-react-lightbox": "^3.21.6",
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.10",
