--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.7.15",
     "photoswipe": "^5.4.4",
     "posthog-js": "^1.167.1",
     "react": "^18",
