--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -21,7 +21,7 @@ RUN \
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
-
+COPY . .
 # This will do the trick, use the corresponding env file for each environment.
 COPY .env.production .env
 
