--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.13",
     "exifreader": "^4.23.7",
     "framer-motion": "^11.11.7",
+    "heic-convert": "^2.1.0",
     "i18next": "^23.16.0",
     "i18next-http-backend": "^2.6.2",
     "lodash": "^4.17.21",
