--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
+    "@types/heic-convert": "^2.1.0",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
