--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,19 +18,19 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "exifreader": "^4.23.7",
-    "framer-motion": "^11.11.7",
+    "framer-motion": "^11.11.9",
     "heic-convert": "^2.1.0",
     "i18next": "^23.16.0",
     "i18next-http-backend": "^2.6.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
-    "next": "14.2.3",
+    "next": "15.0.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
     "photoswipe": "^5.4.4",
     "posthog-js": "^1.167.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-i18next": "^15.0.3",
     "react-photo-album": "^3.0.2",
     "rehype-autolink-headings": "^7.1.0",
@@ -67,10 +67,10 @@
     "@types/heic-convert": "^2.1.0",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.0",
@@ -79,5 +79,11 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "velite": "0.1.0-rc.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
