--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "velite": "0.1.0-rc.3"
+    "velite": "0.2.0"
   },
   "pnpm": {
     "overrides": {
