Enhance image handling and caching in Velite configuration
- Updated `next.config.mjs` to include new remote image patterns and added custom headers for caching.
- Integrated AWS SDK for S3 in `veliteUtils.ts` to manage image uploads and metadata retrieval.
- Modified image conversion logic to support WebP format and upload to S3, including metadata handling.
- Adjusted `velite.config.ts` to streamline image processing and path management.
- Added `@aws-sdk/client-s3` dependency in `package.json` and updated lock files accordingly.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "pnpx prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.717.0",
     "@iconify-icon/react": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.7",
