--- a/package.json
+++ b/package.json
@@ -10,33 +10,33 @@
     "prettier": "pnpx prettier --write ."
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.717.0",
-    "@iconify-icon/react": "^2.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
-    "class-variance-authority": "^0.7.0",
+    "@aws-sdk/client-s3": "^3.839.0",
+    "@iconify-icon/react": "^2.3.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "exifreader": "^4.23.7",
-    "framer-motion": "^11.11.9",
+    "exifreader": "^4.31.1",
+    "framer-motion": "^11.18.2",
     "heic-convert": "^2.1.0",
-    "i18next": "^23.16.0",
-    "i18next-http-backend": "^2.6.2",
+    "i18next": "^23.16.8",
+    "i18next-http-backend": "^2.7.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
-    "next": "15.0.0",
+    "next": "^15.3.4",
     "next-themes": "^0.3.0",
-    "nextjs-toploader": "^3.7.15",
+    "nextjs-toploader": "^3.8.16",
     "photoswipe": "^5.4.4",
-    "posthog-js": "^1.167.1",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-i18next": "^15.0.3",
-    "react-photo-album": "^3.0.2",
+    "posthog-js": "^1.255.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
+    "react-photo-album": "^3.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
-    "rehype-parse": "^9.0.0",
+    "rehype-parse": "^9.0.1",
     "rehype-preset-minify": "^7.0.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-raw": "^7.0.0",
@@ -45,41 +45,41 @@
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-breaks": "^4.0.0",
-    "remark-directive": "^3.0.0",
+    "remark-directive": "^3.0.1",
     "remark-directive-rehype": "^0.4.2",
     "remark-emoji": "^4.0.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
+    "remark-rehype": "^11.1.2",
     "sharp": "^0.33.5",
-    "shiki": "^1.6.0",
-    "swiper": "^11.1.14",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0",
+    "shiki": "^1.29.2",
+    "swiper": "^11.2.10",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.1.0",
-    "yet-another-react-lightbox": "^3.21.6",
-    "zod": "^3.23.8",
+    "usehooks-ts": "^3.1.1",
+    "yet-another-react-lightbox": "^3.23.4",
+    "zod": "^3.25.67",
     "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@types/heic-convert": "^2.1.0",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^20",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "eslint": "^8",
+    "@types/lodash": "^4.17.19",
+    "@types/node": "^20.19.2",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.0",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "velite": "0.2.2"
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "velite": "^0.2.4"
   },
   "pnpm": {
     "overrides": {
